fixed broken layout of all repository list in profile

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1041,7 +1041,7 @@
 .all-projects {
     margin: 0 0 20px;
     list-style: none;
-
+    clear:both;
     // -- project list -- //
     .project {
         margin: 5px 0px; /*5px 20px;*/
